syntax = "proto3";

package aeraki.meta_protocol_proxy.filters.metadata_exchange.v1alpha;

import "udpa/annotations/status.proto";

option java_package = "net.aeraki.meta_protocol_proxy.filters.metadata_exchange.v1alpha";
option java_outer_classname = "MetadataExchangeProto";
option java_multiple_files = true;
option go_package = "github.com/aeraki-mesh/meta-protocol-control-plane-api/meta_protocol_proxy/filters/metadata_exchange/v1alpha;metadataexchangev1alpha";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: metadata exchange]
message MetadataExchange {
}
